[package]
name = "witch-of-erebus"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.7.0"
anyhow = "1.0.57"
log = "0.4.16"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
libloading = "0.7.3"
lazy_static = "1.4.0"
mutex = "0.1.0"